--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,9 @@
 services:
+  database:
+    image: 'postgres:15.2'         #镜像名
+    ports:
+      - '5432'                     #端口号
+    environment:                   #环境
+      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=mydatabase'
+      - 'POSTGRES_PASSWORD=secret'
